--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,18 +3,21 @@ project:
   output-dir: docs
 
 website:
-  title: "laurenstrawberry.github.io"
+  title: "Lauren Berry"
   navbar:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - cv.qmd
+      - climbing.qmd
+      - projects.qmd
 
 format:
   html:
-    theme: cosmo
+    theme: morph
     css: styles.css
     toc: true
+    page-layout: full
 
 editor: visual
 
