--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,9 +8,12 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - cv.qmd
-      - climbing.qmd
-      - projects.qmd
+      - href: cv.qmd
+        text: CV
+      - href: climbing.qmd
+        text: climbing
+      - href: projects.qmd
+        text: projects
 
 format:
   html:
